<resources>
    <string name="app_name">HEARTHApp</string>
    <string name="LOG_IN">LOG IN</string>
    <string name="git">MORE ABOUT US</string>
    <string name="email">EMAIL</string>
    <string name="Telegram">TELEGRAM</string>
    <string name="About_this_app">ABOUT THE APP</string>
    <string name="asa">OUR GOALS</string>
    <string name="data_cont">DATA CONTRIBUTOR</string>
    <string name="SIGN_IN">SIGN IN</string>
    <string name="Ususu">User/Email</string>
    <string name="PuzzleName">I CAN, PUZZLE GAME</string>
    <string name="puzz_description">Welcome to I Can!, an user interactive interface that allows you to pick items from one image and drop it inside a box (complete puzzles). Pick one image from the screen and start having fun meanwhile you try to discover the magic inside every image!</string>
    <string name="Passss">Password</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="GO">GO!</string>
    <string name="or">or</string>
    <string name="lock">LOCK</string>
    <string name="graph_title">USER ANALYSIS</string>
    <string name="home_title">HOME</string>
    <string name="graphContent">Chart analysis still on development</string>
    <string name="play">PLAY</string>
    <string name="state_test">STATE TEST</string>
    <string name="user_title">USER FRAGMENT</string>
    <string name="analysis_title">ANALYSIS FRAGMENT</string>
    <string name="resources_title">RESOURCES FRAGMENT</string>
    <string name="game_name">SCREENSCROLL ZOMBIES</string>
    <string name="Instructions">INSTRUCTIONS</string>
    <string name="next_tit">NEXT</string>
    <string name="back_tit">BACK</string>
    <string name="continue_text">CONTINUE</string>
    <string name="learn">START</string>
    <string name="contribute">CONTRIBUTE</string>
    <string name="true_btn">TRUE</string>
    <string name="false_btn">FALSE</string>
    <string name="bibliography">BIBLIOGRAPHY</string>
    <string name="GAMES">GAMES</string>
    <string name="SELF_Improvement_puzzle">S.I PUZZLES</string>
    <string name="SS_ZOMBIE">SS ZOMBIE</string>
    <string name="BACK">BACK HOME</string>
    <string name="Concentration">CONCENTRATION</string>
    <string name="SmartPhone_Addiction">ADDICTION</string>
    <string name="Mindset">MINDSET</string>
    <string name="Advices">ADVICES</string>
    <string name="SDG3">SDG3</string>
    <string name="Benefits">BENEFITS</string>
    <string name="OW">How much time do you spend using your smartphone in a day?</string>
    <string name="more_than_3">More than 3 and a half hours</string>
    <string name="more_than_2">More than 2 and a half hours and less than 3 and a half hours</string>
    <string name="more_than_1">More than 1 hour and a half less than 2 and a half hours</string>
    <string name="more_than_33">More than 30 minutes - less than 1 hour and 30 minutes</string>
    <string name="less_than_3">less than 30 minutes</string>
    <string name="even_when_y">Even when you\'re with family and friends, you often only look at your smartphone.\u000D\n</string>
    <string name="strongly_ag">STRONGLY AGREE</string>
    <string name="agree">AGREE</string>
    <string name="neutral">NEUTRAL</string>
    <string name="disagree">DISAGREE</string>
    <string name="strongly_di">STRONGLY DISAGREE</string>
    <string name="it_s_easier">It\'s easier to talk on your smartphone than to talk in person.\u000D\n</string>
    <string name="you_ve_had_">You\'ve had a bitter argument with the people around you over your smartphone.\u000D\n</string>
    <string name="you_ve_hadp_">You\'ve had problems with your health or your daily life because of your smartphone.</string>
    <string name="if_your_sma">If your smartphone isn\'t around, you\'re anxious</string>
    <string name="you_ve_seen">You\'ve seen your smartphone right before you fall asleep.\u000D\n</string>
    <string name="take_your_s">Take your smartphone with you when you go to the bathroom.\u000D\n</string>
    <string name="you_look_at">You look at your smartphone when you eat.\u000D\n</string>
    <string name="you_ve_trie">You\'ve tried to reduce your smartphone usage time.</string>
    <string name="very_good_s">Very good! Stay it now!\u000D\n</string>
    <string name="todo">TODO</string>
    <string name="for_more_in">For more information about \nsmartphone addiction</string>
    <string name="back_to_hom">Back to Home</string>
    <string name="try_it_is_a">Try it is a bit risky\u000D\n</string>
    <string name="it_s_danger">It\'s dangerous Take action quickly\u000D\n</string>
    <string name="it_s_very_s">It\'s very serious, just ask for help!\u000D\n</string>
    <string name="descri1">DESCRI!</string>
    <string name="descri2">DESCRI2</string>
    <string name="descri3">DESCRI3</string>
    <string name="descri4">DESCRI4</string>
    <string name="descri5">DESCRI5</string>
    <string name="descri6">DESCRI6</string>
    <string name="descri7">DESCRI7</string>
    <string name="descri8">DESCRI8</string>
    <string name="descri9">DESCRI9</string>
    <string name="descri10">DESCRI10</string>
    <string name="start">START!</string>
    <string name="right_to_ho">Right to Home</string>
    <string name="smartphone_1">Smartphone addiction measurement test</string>
    <string name="some_id1">1</string>
    <string name="some_id2">2</string>
    <string name="some_id3">3</string>
    <string name="some_id4">4</string>
    <string name="some_id5">5</string>
    <string name="some_id6">6</string>
    <string name="some_id7">7</string>
    <string name="some_id8">8</string>
    <string name="some_id9">9</string>
    <string name="some_id10">10</string>
    <string name="home">Home</string>
    <string name="analysis">Analysis</string>
    <string name="Resources">Resources</string>
    <string name="User">User</string>
    <string name="h0me">home</string>
    <string name="analysiss">analysis</string>
    <string name="resourcess">resources</string>
    <string name="users">User</string>
    <string name="title_activity_state_test">StateTest</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="t">T</string>
    <string name="f">F</string>
    <string name="title_desc_1">GAME DESCRIPTION</string>
    <string name="title_desc_2">Explanation</string>
    <string name="title_desc_3">How to play</string>
    <string name="DigitalMemory">DIGITAL MEMORY</string>
    <string name="Nums_for_dumbs">NUMS FOR DUMBS</string>
    <string name="desc_digitalMemory">Phones remember who we are, at the point that we do not know who knows more about who (you do not know a lot about your phone); but here we have one solution: MEMORY!. Is the brain skill that lets you remember (who you are, what you like, what you know), and this solution is a minigame that tries to help you improve that skill. You just have to touch the cards on the view and memorize the images inside them, and finally, touch more cards until you find the last card you memorized. GET FUN WHILE YOU TRAIN THIS AMAZING SKILL!</string>
    <string name="description_game_2">A total of 6 questions consisted of various information about smartphone addiction. (Smartphone addiction syndrome, prevention methods, etc.)</string>
    <string name="description_game_1">The villagers have turned into zombies! Take the quiz to turn the townspeople back into humans!</string>
    <string name="description_game_3">Read the question and press T if the question is correct.</string>
    <string name="description_game_4">If the question is wrong, press F.</string>
    <string name="description_game_5">There are a total of 6 questions. Repeat the above steps to solve all 6 issues. Press the T or F button to go directly to the next question. You cannot go back to a problem you have passed, so think carefully before clicking.</string>
    <string name="description_game_6">The quiz questions used the contents of the About Smartphone Addiction category.</string>
    <string name="q_excessive">Excessive use of smartphones can lead to diseases such as pseudo-developmental disorders, game addiction, ADHD, and tic disorders.</string>
    <string name="q_the_brain">The brains of people who are addicted to smartphones are not very different from those of people who are not addicted to smartphones.</string>
    <string name="q_looking_a">Looking at the phone screen for a long time naturally increases the number of blinks, which can lead to dry eye syndrome.</string>
    <string name="q_a_digital">A digital genius is a phenomenon in which modern people are too dependent on smartphones, and various emergency and memory abilities decline, showing severe brain function deterioration.</string>
    <string name="q_the_more_">The more unnecessary applications you have on your smartphone, the less time you spend using your smartphone unnecessarily.\u000D\n</string>
    <string name="q_nomophobi">Nomophobia Syndrome is an abbreviation for \u00E2\u0080\u0098No mobile phone phobia\u00E2\u0080\u0099 and refers to a syndrome in which people feel phobias without a smartphone.</string>
    <string name="q_smartphon">Smartphone addiction refers to the act of not using a smartphone at all.</string>
    <string name="q_some_seri">Some seriously ill people with digital dementia cannot memorize their family\'s phone numbers, nor can they find their way without navigation.</string>
    <string name="q_if_you_sp">If you spend a lot of time on your smartphone, focusing on a small screen for a long time can easily cause strain on your eyes, which can be a direct cause of tendinosis of the eye or decreased vision.</string>
    <string name="q_if_you_lo">If you look at your smartphone a lot, it is visually exposed until you fall asleep, so an afterimage remains in your head, making it difficult to fall asleep.</string>
    <string name="q_if_you_tr">If you try to make a habit of not using your smartphone outside of set times, you will not use your smartphone outside of the time you use your smartphone, which will help prevent smartphone addiction.</string>
    <string name="q_if_you_tr2">If you try to satisfy your heart through a method other than a smartphone and change your reckless smartphone use pattern to something else, it will not help you to solve your smartphone addiction.</string>
    <string name="q_turning_o">Turning off unnecessary alarms helps prevent smartphone addiction.</string>
    <string name="q_being_add">Being addicted to smartphones is far from healthy rewards.</string>
    <string name="q_blue_ligh">Blue light emitted from smartphones inhibits the secretion of the sleep-inducing hormone, melatonin, in our body, preventing healthy sleep.</string>
    <string name="you_got_all">You got all the questions right! \nEveryone has returned as a human.\u000D\n</string>
    <string name="congratulat">Congratulations!!</string>
    <string name="you_got_one">You got one\n thing wrong.\nThe five have returned as humans.\u000D \n</string>
    <string name="well_done_">\u000DWell done!\u000D\n</string>
    <string name="you_got_two">You got two questions wrong. The four returned as humans.\u000D\n</string>
    <string name="cool_">\u000Dcool!</string>
    <string name="you_got_thr">You got three \nquestions wrong. \nThe three returned \nas humans.</string>
    <string name="not_bad_">Not bad!</string>
    <string name="do_your_bes">Do your best..!</string>
    <string name="five_questi">Five questions \nare wrong.\nOnly one has \nreturned \nas a human.</string>
    <string name="try_again_">Try again…</string>
    <string name="pease_study">Pease study....\u000D</string>
</resources>