<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".finished_act.finished_activity_3">
    <TextView
        android:id="@+id/textView3"
        android:layout_width="279dp"
        android:layout_height="203dp"
        android:layout_marginTop="144dp"
        android:gravity="center|center_horizontal"
        android:text="@string/you_got_two"
        android:textColor="#101010"
        android:textSize="35sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/congratulat"
        android:layout_width="313dp"
        android:layout_height="77dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal|top"
        android:text="@string/cool_"
        android:textColor="#F880D6"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/pease_study"
        android:src="@drawable/m2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.148"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginBottom="152dp"
        android:contentDescription="@string/q_smartphon"
        android:src="@drawable/m3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView7" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="92dp"
        android:contentDescription="@string/five_questi"
        android:src="@drawable/m5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/congratulat" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/do_your_bes"
        android:src="@drawable/m6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />



</androidx.constraintlayout.widget.ConstraintLayout>