<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".finished_act.Finished_activity_1">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="279dp"
        android:layout_height="203dp"
        android:layout_marginTop="100dp"
        android:gravity="center|center_horizontal"
        android:text="@string/you_got_all"
        android:textColor="#101010"
        android:textSize="35sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/congratulat"
        android:layout_width="313dp"
        android:layout_height="77dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="36dp"
        android:gravity="center_horizontal|top"
        android:text="@string/congratulat"
        android:textColor="#fbff12"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/congratulat"
        android:src="@drawable/m1"
        app:layout_constraintEnd_toStartOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/congratulat" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/pease_study"
        android:src="@drawable/m2"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginBottom="56dp"
        android:contentDescription="@string/q_smartphon"
        android:src="@drawable/m3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/m4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/congratulat" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/five_questi"
        android:src="@drawable/m5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/congratulat" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/do_your_bes"
        android:src="@drawable/m6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

</androidx.constraintlayout.widget.ConstraintLayout>