<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    tools:context=".Instructions"
    android:layout_width="match_parent"
    android:background="@drawable/gradient_bg_1_2"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/child_scroll"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/button_design_4"
            android:gravity="center"
            android:text="@string/title_desc_1"
            android:textColor="@color/blue_dark"
            android:textSize="40sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_design_res_2"
            android:padding="12dp"
            android:text="@string/description_game_1"
            android:textColor="@color/blue_dark"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/child_scroll" />

        <TextView
            android:id="@+id/body_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_design_5"
            android:gravity="center"
            android:text="@string/title_desc_2"
            android:textColor="@color/blue_dark"
            android:textSize="34sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headline" />

        <TextView
            android:id="@+id/body_text_2"
            android:layout_width="0dp"
            android:padding="16sp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/green_bonito"
            android:background="@drawable/button_game_bg"
            android:textSize="35sp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/description_game_2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/body_text" />

        <TextView
            android:id="@+id/body_text_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="16sp"
            android:textColor="@color/blue_dark"
            android:background="@drawable/button_design_5"
            android:textSize="35sp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/title_desc_3"
            android:gravity="center"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/body_text_2" />

        <TextView
            android:id="@+id/body_text_4"
            android:layout_width="0dp"
            android:padding="16sp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/green_bonito"
            android:background="@drawable/button_game_bg"
            android:textSize="35sp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/description_game_3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/body_text_3" />

        <TextView
            android:id="@+id/body_text_5"
            android:layout_width="0dp"
            android:padding="16sp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/green_bonito"
            android:background="@drawable/button_game_bg"
            android:textSize="35sp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/description_game_4"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/body_text_4" />

        <TextView
            android:id="@+id/body_text_6"
            android:layout_width="0dp"
            android:padding="16sp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/green_bonito"
            android:background="@drawable/button_game_bg"
            android:textSize="35sp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/description_game_5"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/body_text_5" />

        <TextView
            android:id="@+id/body_text_7"
            android:layout_width="0dp"
            android:padding="16sp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/green_bonito"
            android:background="@drawable/button_game_bg"
            android:textSize="35sp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/description_game_6"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/body_text_6" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>