<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".finished_act.finished_activitt_6">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="279dp"
        android:layout_height="203dp"
        android:layout_marginTop="144dp"
        android:gravity="center|center_horizontal"
        android:text="@string/five_questi"
        android:textColor="#101010"
        android:textSize="35sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/congratulat"
        android:layout_width="313dp"
        android:layout_height="77dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="72dp"
        android:gravity="center_horizontal|top"
        android:text="@string/try_again_"
        android:textColor="
#8980F5"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="96dp"
        android:contentDescription="@string/q_smartphon"
        android:src="@drawable/m3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/congratulat" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="96dp"
        android:contentDescription="@string/five_questi"
        android:src="@drawable/m5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/congratulat" />


</androidx.constraintlayout.widget.ConstraintLayout>